update TODO, add more stretch goals and progress of current project

--- a/TODO
+++ b/TODO
@@ -1,8 +1,11 @@
-code review
-get this thing running
-find the applicable libraries
-get reading functional
+code review - done
+get this thing running - done
+find the applicable libraries - done
+get reading functional - in progress
 get sending functional
 
 ---stretch goals---
 Make pretty icons and artwork
+SSL / TLS support
+---Super Stretch (tm)---
+openPGP
